<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="hello">Hello World!</string>
    <string name="app_name">MikroDroid</string>
        
    <string name="status_no_devices">Use menu to add devices</string>
    
    <string name="menu_add_device">Add Device</string>
    <string name="menu_bootstrap_routeros">Boot RouterOS Menu</string>
    <string name="menu_settings">Settings</string>
    
	<string name="text_name">Name</string>
	<string name="text_ip_address">IP Address</string>
	<string name="text_type">Type</string>
	<string name="text_username">Username</string>
	<string name="text_password">Password</string>
	<string name="text_use_global_login">Use Global Login</string>	
	
	<string name="button_confirm">Confirm</string>
	
	<string name="window_edit_device">Edit Device</string>
	
	<string name="menu_ctx_login">Login</string>
    <string name="menu_ctx_edit">Edit</string>
    <string name="menu_ctx_delete">Delete</string>
    
    <string name="error_login_failed">Invalid username or password</string>    
    <string name="error_invalid_login_type">Cannot login to this type of device</string>    
    <string name="error_boot_menu_first">Bootstrap RouterOS Menu First</string>
    <string name="error_blank_username">Username is blank. Check settings.</string>
    
    <string name="setting_general_category">General</string>
    
    <string name="setting_global_username_title">Global Username</string>
    <string name="setting_global_username_summary">Username Summary</string>    
    <string name="setting_global_username_dialog">Enter Username</string>                
    
    <string name="setting_global_password_title">Global Password</string>
    <string name="setting_global_password_summary">******************</string>    
    <string name="setting_global_password_dialog">Enter Password</string>
    
    <string name="setting_system_category">System</string>
    
    <string name="setting_api_port_title">MikroTik API Port</string>
    <string name="setting_api_port_summary">MikroTik API Port Summary</string>    
    <string name="setting_api_port_dialog">Enter MikroTik API Port</string>
    
    <string name="setting_bootstrap_category">RouterOS Boot Menu Information</string>
    
    <string name="setting_bootstrap_ip_title">IP Address</string>
    <string name="setting_bootstrap_ip_summary">IP Address Summary</string>    
    <string name="setting_bootstrap_ip_dialog">Enter IP Address</string>
    
    <string name="setting_bootstrap_username_title">Username</string>
    <string name="setting_bootstrap_username_summary">Username Summary</string>    
    <string name="setting_bootstrap_username_dialog">Enter Username</string>
    
    <string name="setting_bootstrap_password_title">Password</string>
    <string name="setting_bootstrap_password_summary">******************</string>    
    <string name="setting_bootstrap_password_dialog">Enter Password</string>       
    
	<string name="menu_filter">Filter</string>    

</resources>