<?xml version="1.0" encoding="utf-8"?>
<!-- See API demos -->
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
            android:title="@string/setting_general_category">

        <EditTextPreference
                android:key="setting_global_username"
                android:title="@string/setting_global_username_title"
                android:summary="@string/setting_global_username_summary"
                android:dialogTitle="@string/setting_global_username_dialog"
		/>
		
		 <EditTextPreference
                android:key="setting_global_password"
                android:title="@string/setting_global_password_title"
                android:summary="@string/setting_global_password_summary"
                android:dialogTitle="@string/setting_global_password_dialog"
                android:password="true"                
		/>
                
    </PreferenceCategory>
    
	<PreferenceCategory
            android:title="@string/setting_system_category">

        <EditTextPreference
                android:key="setting_api_port"
                android:title="@string/setting_api_port_title"
                android:summary="@string/setting_api_port_summary"
                android:dialogTitle="@string/setting_api_port_dialog"
		/>
				 
    </PreferenceCategory>
    
	<PreferenceCategory
            android:title="@string/setting_bootstrap_category">

        <EditTextPreference
                android:key="setting_bootstrap_ip"
                android:title="@string/setting_bootstrap_ip_title"
                android:summary="@string/setting_api_port_summary"
                android:dialogTitle="@string/setting_bootstrap_ip_dialog"
		/>
		
		 <EditTextPreference
                android:key="setting_bootstrap_username"
                android:title="@string/setting_bootstrap_username_title"
                android:summary="@string/setting_bootstrap_username_summary"
                android:dialogTitle="@string/setting_bootstrap_username_dialog"
		/>
		 
		  <EditTextPreference
                android:key="setting_bootstrap_password"
                android:title="@string/setting_bootstrap_password_title"
                android:summary="@string/setting_bootstrap_password_summary"
                android:dialogTitle="@string/setting_bootstrap_password_dialog"
                android:password="true"                
		/>
		 
    </PreferenceCategory>
	    
</PreferenceScreen>
