<?xml version="1.0" encoding="utf-8"?>

<TableLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="right"
            android:text="@string/text_name" />

        <EditText
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
    </TableRow>

 	<TableRow>

 	    <TextView
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_gravity="center_vertical"
 	        android:gravity="right"
 	        android:text="@string/text_ip_address" />

 	    <EditText
 	        android:id="@+id/text_ip_address"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content" 	/>        
 	</TableRow>
	
	<TableRow android:baselineAligned="false" >
	
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical"
	    android:gravity="right"
	    android:text="@string/text_type" />
		
	<RadioGroup		
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_span="1"
      android:orientation="horizontal">                  
      <RadioButton android:id="@+id/radio_mikrotik"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:checked="true"
          android:text="MikroTik" />
      <RadioButton android:id="@+id/radio_other"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Other" />          
    </RadioGroup>
    
    </TableRow>
    
	<TableRow>

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="right" />

	    <CheckBox
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:orientation="horizontal"
	        android:text="@string/text_use_global_username" />
	</TableRow>

	<TableRow
	    android:id="@+id/tableRow1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >

		<TextView
		    android:id="@+id/textView1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/text_username" />

		<EditText
		    android:id="@+id/text_username"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" >
		</EditText>

	</TableRow>

	<TableRow
	    android:id="@+id/tableRow2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >

		<TextView
		    android:id="@+id/textView2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/text_password" />

		<EditText
		    android:id="@+id/text_password"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:inputType="textPassword" />

	</TableRow>
	
	<TableRow>

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="right" />

	    <Button
	        android:id="@+id/button_confirm"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	        
	        android:text="@string/button_confirm" />
	</TableRow>

</TableLayout>